<resources>
    <string name="sign_up">Sign Up For Facebook</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="forgot_password">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>